# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  database.py  tools.py
page_analyzer/templates/: index.html  start_page.html  url_id.html  url_id_error.html  urls_list.html
